<resources>
    <string name="app_name">DR-EGYPT</string>

    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Facebook Strings -->
    <string name="facebook_app_id">1256853057779143</string>
    <string name="fb_login_protocol_scheme">fb1256853057779143</string>

    <!-- Start of Fahmy Strings -->
    <string name="toolbar_medical_Guide">Medical Guide</string>
    <string name="toolbar_hospital">Hospital</string>
    <string name="toolbar_clinics">Clinics</string>
    <string name="toolbar_pharmacy">Pharmacy</string>
    <string name="toolbar_cosmetics">Cosmetics</string>
    <string name="toolbar_jobs">Jobs</string>
    <string name="toolbar_products">Products</string>
    <string name="toolbar_Favorite">Favorite</string>
    <string name="toolbar_AddProduct">Add Product</string>

    <string name="text1_main">Medical Guide</string>
    <string name="text2_main">Products</string>
    <string name="text3_main">Jobs</string>
    <string name="text4_main">Cosmetics</string>

    <string name="text1_medical">Hospital</string>
    <string name="text2_medical">Clinics</string>
    <string name="text3_medical">Pharmacy</string>

    <string name="textName_hospital">Name</string>
    <string name="textAddress_hospital">Address</string>
    <string name="textEmail_hospital">Email</string>
    <string name="textWebSite_hospital">Web Site</string>

    <string name="nameActivity_Main">DR-EGYPT</string>
    <string name="nameActivity_Medical">Medical Guide</string>
    <string name="nameActivity_Region"> Region</string>
    <string name="nameActivity_Specialization">Specialization</string>
    <string name="nameActivity_Filters">Filters</string>


    <string name="text_ExperienceLevel_detailsJobs">Experience Level : </string>
    <string name="text_EducationLevel_detailsJobs">Education Level : </string>
    <string name="text_EmploymentType_detailsJobs">Employment Type :  </string>
    <string name="text_Salary_detailsJobs">Salary : </string>
    <string name="text_Created_detailsJobs">Created : </string>
    <string name="text_Phone_detailsJobs">Phone : </string>
    <string name="text_Phone">Phone</string>

    <string name="text_Address_detailsJobs">Address : </string>


    <!-- Start of Fahmy Strings -->

    <!-- Start of Hima Strings -->
    <string name="Favorite">Favorites</string>
    <string name="hello_world">Hello world!</string>
    <string name="email">Email</string>
    <string name="Enter_email">Enter your email address</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet?</string>
    <string name="fullName">Full Name</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account?</string>
    <string name="registered_emailid">Please enter your Registered Email</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="Login"> <u>Login</u> </string>
    <string name="Sign_Up_here"> <u>Sign Up here.</u> </string>
    <string name="pls_S_In_Up">Please sign up or login</string>
    <string name="Not_Now"><u>Not now</u></string>
    <string name="terms_of_service"><u>Terms and Conditions.</u></string>
    <string name="terms">By creating an account you agree to the</string>
    <string name="oror">Or</string>
    <string name="facebooks">Facebook</string>
    <string name="signUpwithEmail">Sign Up New Email</string>
    <string name="Submitz">Submit</string>


    <string name="More_Details"><u>More details ></u></string>
    <string name="ratingIconHeartFilled">♥</string>
    <string name="ratingIconHeartOutline">♡</string>
    <string name="title_activity_favorite">FavoriteActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_contact_us">Map</string>

    <string name="createdBy">Sold by : </string>


    <!-- Start of Hima Strings -->

    <string name="medical_guide">Medical Guide</string>
    <string name="products">Products</string>
    <string name="jobs">Jobs</string>
    <string name="cosmetics">Cosmetics</string>
    <string name="hospitals">Hospital</string>
    <string name="clinics">Clinics</string>
    <string name="pharmacy">Pharmacies</string>

    <string name="nextpro">Next Product</string>
    <string name="prevpro">Previous Product</string>


    <!-- Start of AddProduct/Jobs Strings -->
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="description0">Description :</string>

    <string name="price">Price</string>
    <string name="choose_city">Choose City</string>
    <string name="choose_area">Choose Area</string>
    <string name="address">Address</string>
    <string name="category">Category</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="add_phone">+add phone</string>
    <string name="add_image">Add Image</string>
    <string name="status">Status</string>
    <string name="newnew">New</string>
    <string name="used">Used</string>
    <string name="submit_product">Submit</string>
    <string name="salary">Salary</string>
    <string name="salary0">Salary :</string>

    <string name="job_type">Job Type</string>
    <string name="employer">Employer</string>
    <string name="job_seeker">Job Seeker</string>
    <string name="experience_level">Experience Level</string>
    <string name="education_level">Education Level</string>
    <string name="employment_type">Employment Type</string>
    <string name="submit_job">Submit</string>
    <string name="views">Views</string>
    <string name="actions">Actions</string>

    <!-- end of AddProduct/Jobs Strings -->


    <!-- Start of Filters Strings -->

    <string name="all">All</string>
    <string name="speciality">Speciality</string>
    <string name="aapply">Apply</string>
    <string name="llocation">Location</string>
    <string name="feature">Feature</string>
    <string name="homeDelivery">Home Delivery</string>
    <string name="hour24">24 Hour</string>
    <string name="choose_location">Choose Location</string>
    <string name="detect_location">Detect Location</string>

    <string name="sort">Order By</string>
    <string name="sorting">sort</string>

    <string name="cancel">Cancel</string>
    <string name="rate">Rate</string>
    <string name="rateLTH">Low to High</string>
    <string name="rateHTL">High to Low</string>
    <string name="addpro">Add Product</string>
    <string name="addjob">Add Job</string>

    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="Updated">Updated at</string>





















</resources>
