<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_hospital"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/marvel"
            app:layout_constraintTop_toTopOf="@id/parent" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="?android:ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:isIndicator="false"
            android:numStars="5"
            android:rating="2"
            android:theme="@style/RatingBar1"
            app:layout_constraintStart_toStartOf="@id/image_hospital"
            app:layout_constraintTop_toBottomOf="@id/image_hospital" />

        <TextView
            android:id="@+id/text_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="13"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/myToggleButton"
            app:layout_constraintTop_toBottomOf="@+id/image_hospital" />




        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:text="@string/textName_hospital"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/ratingBar"
            app:layout_constraintTop_toBottomOf="@id/ratingBar" />

        <TextView
            android:id="@+id/text_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:text="@string/textAddress_hospital"

            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/text_name"
            app:layout_constraintTop_toBottomOf="@id/text_name" />


        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:text="@string/textEmail_hospital"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/text_address"
            app:layout_constraintTop_toBottomOf="@id/text_address" />

        <TextView
            android:id="@+id/text_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:text="@string/textWebSite_hospital"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/text_address"
            app:layout_constraintTop_toBottomOf="@id/text_email"
            app:layout_constraintBottom_toBottomOf="@id/parent"
            />



        <ToggleButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="12dp"
            android:id="@+id/myToggleButton"
            android:textOff=""
            android:textOn=""

            app:layout_constraintStart_toEndOf="@id/ratingBar"
            app:layout_constraintEnd_toEndOf="@id/parent"
            app:layout_constraintTop_toBottomOf="@id/image_hospital"

            />
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>